--- a/react-ingredients/public/index.html
+++ b/react-ingredients/public/index.html
@@ -4,7 +4,7 @@
     <title>React Skeleton</title>
   </head>
   <body>
-    <div id='ingredients'></div>
-    <script src='js/main.js'></script>
+    <div id="ingredients"></div>
+    <script src="js/main.js"></script>
   </body>
 </html>
