Add a button and an input field

--- a/bootstrappy/index.html
+++ b/bootstrappy/index.html
@@ -9,7 +9,8 @@
 
   </head>
   <body>
-    <button class="btn btn-primary">clickypoo</button>
+    <button class="btn btn-default">clickypoo</button>
+    <input class='form-control'></input>
 
     <script src="jquery-2.2.4.min.js"></script>
 
