Make main container responsive

--- a/bootstrappy/index.html
+++ b/bootstrappy/index.html
@@ -9,8 +9,13 @@
 
   </head>
   <body>
-    <button class="btn btn-default">clickypoo</button>
-    <input class='form-control'></input>
+    <div class='container'>
+      <div class='row'>
+        <div class='col-xs-1 col-sm-3 col-md-6 col-lg-12' style='background-color:pink; height:200px'>
+          <p>truck</p>
+        </div>
+      </div>
+    </div>
 
     <script src="jquery-2.2.4.min.js"></script>
 
