--- a/bootstrappy/index.html
+++ b/bootstrappy/index.html
@@ -11,8 +11,22 @@
   <body>
     <div class='container'>
       <div class='row'>
-        <div class='col-xs-1 col-sm-3 col-md-6 col-lg-12' style='background-color:pink; height:200px'>
+        <div class='col-xs-12' style='background-color: pink; height: 200px'>
           <p>truck</p>
+        </div>
+      </div>
+      <div class='row'>
+        <div class='col-xs-12 col-sm-4' style='background-color: red; height: 200px'></div>
+        <div class='col-xs-12 col-sm-4' style='background-color: green; height: 200px'></div>
+        <div class='col-xs-12 col-sm-4' style='background-color: blue; height: 200px'></div>
+      </div>
+      <div class='row'>
+        <div class='col-xs-4 col-xs-offset-4' style='background: red; height: 200px'>
+          <div class='row'>
+            <div class='col-xs-12 col-sm-4' style='background-color: fuchsia; height: 100px'></div>
+            <div class='col-xs-12 col-sm-4' style='background-color: olive; height: 100px'></div>
+            <div class='col-xs-12 col-sm-4' style='background-color: aquamarine; height: 100px'></div>
+          </div>
         </div>
       </div>
     </div>
