Add two more lists

--- a/ingredients-styled/public/index.html
+++ b/ingredients-styled/public/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ingredients, man</title>
+    <title>Lists</title>
     <link rel='stylesheet' href='css/bootstrap.min.css'>
     <link rel='stylesheet' href='css/bootstrap-theme.min.css'>
   </head>
   <body>
-    <div id="ingredients"></div>
+    <div className='container'>
+      <div className='row'>
+        <div id="ingredients"></div>
+        <div id="foutons"></div>
+        <div id="sandwiches"></div>
+      </div>
+    </div>
     <script src='js/jquery-1.12.4.min.js'></script>
     <script src='js/bootstrap.min.js'></script>
     <script src="js/main.js"></script>
