Correct page components to return something

--- a/react-routing/public/index.html
+++ b/react-routing/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>React Skeleton</title>
+    <title>React Routes</title>
   </head>
   <body>
-    <div id='ingredients'></div>
+    <div id='main'></div>
     <script src='js/main.js'></script>
   </body>
 </html>
